# Library-Software

./: .gitignore  README.md
library_app/: Cargo.toml
library_app/src/: app.rs  main.rs
library_app/src/ui/: landing_page.rs  mod.rs  top_nav.rs
libsoft-tauri/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
libsoft-tauri/src/: App.tsx  index.css
libsoft-tauri/src-tauri/: Cargo.toml  tauri.conf.json
libsoft-tauri/src-tauri/icons/: icon.icns
libsoft-tauri/src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
libsoft-tauri/src/components/: BookModule.tsx  Dashboard.tsx  FacultyModule.tsx  MembershipModule.tsx  SystemModule.tsx  ui.tsx
libsoft-tauri/src/lib/: tauri.ts
libsoft_rust/: Cargo.toml  libsoft.db
libsoft_rust/src/: app.rs  main.rs
libsoft_rust/src/db/: books.rs  faculty.rs  members.rs  mod.rs  schema.rs  transactions.rs
libsoft_rust/src/models/: book.rs  faculty.rs  member.rs  mod.rs  transaction.rs
libsoft_rust/src/ui/: books.rs  faculty.rs  main_window.rs  membership.rs  mod.rs  reports.rs  settings.rs
libsoft_rust/src/utils/: mod.rs
